SA-layout issue solve

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -65,4 +65,7 @@
         padding-left: 13px;
         padding-right: 13px;
     }
+    .navbar-brand {
+        padding-left: 40px;
+    }
 }
